adding the note feature
