# budget-buddy-api/src/main/java/com/yassir/budgetbuddy/note/controller/NoteResponse.java
@@ -1,0 +1,20 @@
+package com.yassir.budgetbuddy.note.controller;
+
+
+import lombok.*;
+
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+public class NoteResponse {
+
+    private Integer id;
+    private String title;
+    private String content;
+    private LocalDateTime createdDate;
+}
