# budget-buddy-ui/src/app/services/models/expenses-response.ts
@@ -2,6 +2,7 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+import { NoteResponse } from '../models/note-response';
 export interface ExpensesResponse {
   amount?: number;
   archived?: boolean;
@@ -12,5 +13,6 @@ export interface ExpensesResponse {
   expensesType?: string;
   id?: number;
   name?: string;
+  notes?: Array<NoteResponse>;
   wallet?: string;
 }
