# budget-buddy-ui/src/app/services/models/note-request.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface NoteRequest {
+  content: string;
+  expenseId?: number;
+  id?: number;
+  title: string;
+}
