# budget-buddy-ui/src/app/services/models/note-response.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface NoteResponse {
+  content?: string;
+  createdDate?: string;
+  id?: number;
+  title?: string;
+}
